Background Image not showing resolved.

--- a/TypeWriterEffect/styles.css
+++ b/TypeWriterEffect/styles.css
@@ -3,8 +3,12 @@
 body {
   font-family: "Montserrat", sans-serif;
   height: 100vh;
-  background: #333;
+  /* background: #333; */
   color: #aaa;
+  background-image: url('bgImage.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .container {
